# component

Drag and Drop Image/: index.html  script.js  style.css
Drop and Crop/: cropper.js  index.html  script.js  style.css
Form Validation/: style.css
form-validation/: index.html  script.js
js-crop-image/: index.html  script.js  style.css
js-face-recognition/face-detection/: index.html
js-face-recognition/face-verification/: index.html  script.js
qr/js-qr/: generator.html  scanner.html
qr/python-qr/: generate_qr.py  pyproject.toml  scanner_qr.py
